<resources>
    <string name="app_name">Sixth_sense</string>
    <string name="button_settings">Settings</string>
    <string name="button_connect">Connect</string>
    <string name="edit_value">Enter reference</string>
    <string name="Default_value">Default...</string>
    <string name="message_write_error">Error Writing Message !</string>
    <string name="message_write_success">Successfully written to Tag !</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="message_read_tag">Read from NFC Tag</string>
    <string name="message_write_tag">Write to NFC Tag</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device !</string>
    <string name="hint_message">Message</string>

</resources>
